# mypackage-demo

./: .env.sample  README.md  docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
src/: Dockerfile  pyproject.toml
src/mypackage/: cli.py  config.py
